made the sample link to a static library

--- a/OpenAssetImport/samples/SimpleOpenGL/makefile
+++ b/OpenAssetImport/samples/SimpleOpenGL/makefile
@@ -16,7 +16,7 @@ VPATH = ./usr/include/
 INCLUDEFLAGS = -I../../include 
 
 # Library flags for gcc
-LIBFLAGS = -L.
+LIBFLAGS = -L../../../
 
 # Output name of executable
 OUTPUT = samplegl
